# RealTimeRendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.h.in
media/shader/csm/: csm.frag  csm.vert  quadDebug.frag
media/shader/flat/: flat.frag  flat.vert
media/shader/gbufferGen/: gbufferGen.frag  gbufferGen.vert
media/shader/phong/: phong.frag  phong.vert
src/: CMakeLists.txt  camera_controller.h  config.h  gbuffer.cpp  gbuffer.h  main.cpp  material.h  mesh.h  model.h  renderer.cpp  renderer.h  renderer_options.h  scene.h  shader.cpp  shader.h  spdlogMgr.cpp  spdlogMgr.h  ui.cpp  ui.h  ui_options.h  viewer.cpp  viewer.h
src/base/: application.cpp  application.h  bounding_box.h  camera.cpp  camera.h  framebuffer.cpp  frustum.h  gl_utility.h  index_buffer.h  light.h  model.cpp  shader.cpp  shader.h  skybox.cpp  texture_cubemap.cpp  vertex.h  vertex_array.h  vertex_buffer.h
